--- a/02_Data Extraction, Transform and Loading/sourceCode/cookbook-app/pom.xml
+++ b/02_Data Extraction, Transform and Loading/sourceCode/cookbook-app/pom.xml
@@ -14,8 +14,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -39,6 +39,13 @@
       <groupId>org.datavec</groupId>
       <artifactId>datavec-api</artifactId>
       <version>1.0.0-beta3</version>
+    </dependency>
+    <!--  You need the below dependency to use CodecRecordReader-->
+    <dependency>
+      <groupId>org.datavec</groupId>
+      <artifactId>datavec-data-codec</artifactId>
+      <version>1.0.0-beta3</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
