New API code added, added shaded jar config in pom.xml

--- a/03_Building Deep Neural Networks for Binary classification/sourceCode/cookbookapp/.gitignore
+++ b/03_Building Deep Neural Networks for Binary classification/sourceCode/cookbookapp/.gitignore
@@ -4,3 +4,6 @@ cookbook-app.iml
 cookbook-app.iws
 cookbook-app.ipr
 cookbookapp.iml
+dependency-reduced-pom.xml
+model.zip
+LocalExecuteExample.csv
