--- a/04_Building Convolutional Neural Networks/sourceCode/cookbookapp/pom.xml
+++ b/04_Building Convolutional Neural Networks/sourceCode/cookbookapp/pom.xml
@@ -96,11 +96,16 @@
             <artifactId>datavec-data-codec</artifactId>
             <version>1.0.0-beta3</version>
         </dependency>
-        <!--       <dependency>
-                   <groupId>org.bytedeco.javacpp-presets</groupId>
-                   <artifactId>${moduleName}-platform</artifactId>
-                   <version>${moduleVersion}-1.4.4</version>
-               </dependency>-->
+        <dependency>
+            <groupId>org.bytedeco.javacpp-presets</groupId>
+            <artifactId>opencv</artifactId>
+            <version>4.0.1-1.4.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bytedeco.javacpp-presets</groupId>
+            <artifactId>opencv-platform</artifactId>
+            <version>4.0.1-1.4.4</version>
+        </dependency>
         <dependency>
             <groupId>org.bytedeco</groupId>
             <artifactId>javacv-platform</artifactId>
