--- a/03_Building Deep Neural Networks for Binary classification/sourceCode/cookbookapp/pom.xml
+++ b/03_Building Deep Neural Networks for Binary classification/sourceCode/cookbookapp/pom.xml
@@ -81,6 +81,11 @@
             <version>1.0.0-beta3</version>
         </dependency>
         <dependency>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>deeplearning4j-ui_2.10</artifactId>
+            <version>1.0.0-beta3</version>
+        </dependency>
+        <dependency>
             <groupId>org.nd4j</groupId>
             <artifactId>nd4j-native-platform</artifactId>
             <version>1.0.0-beta3</version>
