--- a/05_Implementing NLP/sourceCode/cookbookapp/.gitignore
+++ b/05_Implementing NLP/sourceCode/cookbookapp/.gitignore
@@ -5,6 +5,8 @@ cookbook-app.iws
 cookbook-app.ipr
 cookbookapp.iml
 cookbookapp-nlp.iml
+cookbookapp-cnn.iml
 dependency-reduced-pom.xml
 model.zip
 LocalExecuteExample.csv
+words.txt
