Draft source for ch 11

--- a/11_Applying Transfer Learning to network models/sourceCode/cookbookapp/pom.xml
+++ b/11_Applying Transfer Learning to network models/sourceCode/cookbookapp/pom.xml
@@ -86,6 +86,16 @@
             <version>1.0.0-beta3</version>
         </dependency>
         <dependency>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>deeplearning4j-zoo</artifactId>
+            <version>1.0.0-beta3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>deeplearning4j-modelimport</artifactId>
+            <version>1.0.0-beta3</version>
+        </dependency>
+        <dependency>
             <groupId>org.nd4j</groupId>
             <artifactId>nd4j-native-platform</artifactId>
             <version>1.0.0-beta3</version>
