chapter 4 fix source code

--- a/04_Building Convolutional Neural Networks/sourceCode/cookbookapp/.gitignore
+++ b/04_Building Convolutional Neural Networks/sourceCode/cookbookapp/.gitignore
@@ -4,6 +4,7 @@ cookbook-app.iml
 cookbook-app.iws
 cookbook-app.ipr
 cookbookapp.iml
+cookbookapp-cnn.iml
 dependency-reduced-pom.xml
 model.zip
 LocalExecuteExample.csv
